Fixed bugs around: - multiple charts used on the same report page - inconsistent display of 0 values - unreadable data for large datasets
Added:
- License file
- Privacy file

--- a/src/Clients/Visuals/styles/visuals.less
+++ b/src/Clients/Visuals/styles/visuals.less
@@ -1799,3 +1799,16 @@ div.ql-toolbar {
     stroke-width: 3px;
     stroke-opacity: 0.5;
 }
+
+.svgTableHeatMap
+{
+    rect.bordered {
+        stroke: #E6E6E6;
+        stroke-width:2px;   
+        }
+    
+    text.mono {
+        font-size: 12px;
+        fill: #aaa;
+    }
+}
